styles/components/_menu-secondary.scss
.menu-schools {
  padding: 0 24px;
  height: 100%;

  @include media-breakpoint-up(md) {
    display: flex;
    width: 100%;
    align-items: center;
    padding: 0;

    &::before {
      content: '';
      margin-top: auto;
    }

    &::after {
      content: '';
      margin-bottom: auto;
    }
  }

  .container-fluid {
    max-height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
  }

  .menu-schools__col {
    margin-bottom: $spacer * 3;
    text-align: center;

    @include media-breakpoint-up(md) {
      margin-bottom: 0;
      padding-top: $spacer * 5;
      padding-bottom: $spacer * 5;

      &:last-child {
        position: relative;

        &::before {
          content: '';
          display: block;
          position: absolute;
          top: 0;
          left: -1px;
          width: 2px;
          height: 100%;
          background: $color_white;
          box-shadow: $default-box-shadow;
        }
      }
    }
  }

  h2 {
    margin-bottom: $spacer * 2;
  }

  .menu-schools__link {
    margin: 1rem 0;

    a {
      text-decoration: none;
      position: relative;
      text-align: center;
      display: inline;
      padding: .5rem 0;

      &::after {
        content: "";
        position: absolute;
        bottom: .25rem;
        width: 0;
        display: inline-block;
        height: 1px;
        background: $color_black;
        transform: translate(-50%, 0);
        left: 50%;
        transition: width .2s ease-out;

        @media (max-width: 480) {
          display: none;
        }
      }

      &:hover, &:focus {
        opacity: 1;

        &::after {
          width: 100%;
        }
      }
    }
  }
}

